-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 17
-
Component/s: hotspot
-
b24
-
x86
-
generic
-
Verified
The following tests crashes with -XX:UseAVX=1
```
jdk/incubator/vector/Byte64VectorLoadStoreTests.java
jdk/incubator/vector/Byte128VectorLoadStoreTests.java
jdk/incubator/vector/Short128VectorLoadStoreTests.java
jdk/incubator/vector/Int128VectorLoadStoreTests.java
jdk/incubator/vector/FloatMaxVectorLoadStoreTests.java
jdk/incubator/vector/ShortMaxVectorLoadStoreTests.java
jdk/incubator/vector/IntMaxVectorLoadStoreTests.java
jdk/incubator/vector/ByteMaxVectorLoadStoreTests.java
jdk/incubator/vector/Float128VectorLoadStoreTests.java
jdk/incubator/vector/Short64VectorLoadStoreTests.java
```
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jvm/jdk/src/hotspot/cpu/x86/assembler_x86.cpp:4127), pid=90500, tid=90542
# Error: assert(VM_Version::supports_avx2()) failed
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc.jvm.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc.jvm.jdk, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x5cb1a4] Assembler::vpmovmskb(RegisterImpl*, XMMRegisterImpl*)+0xe4
#
Current CompileTask:
C2: 2698 732 jdk.incubator.vector.FloatVector::checkMaskFromIndexSize (16 bytes)
Stack: [0x00007f55811b2000,0x00007f55812b3000], sp=0x00007f55812adbf0, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x5cb1a4] Assembler::vpmovmskb(RegisterImpl*, XMMRegisterImpl*)+0xe4
V [libjvm.so+0x7cc492] C2_MacroAssembler::vector_mask_operation(int, RegisterImpl*, XMMRegisterImpl*, XMMRegisterImpl*, XMMRegisterImpl*, RegisterImpl*, int, int)+0x92
V [libjvm.so+0x412653] vmask_first_or_last_true_avxNode::emit(CodeBuffer&, PhaseRegAlloc*) const+0x233
V [libjvm.so+0x13cd3cf] PhaseOutput::scratch_emit_size(Node const*)+0x41f
V [libjvm.so+0x13c4634] PhaseOutput::shorten_branches(unsigned int*)+0x2a4
V [libjvm.so+0x13d514a] PhaseOutput::Output()+0xc3a
V [libjvm.so+0x95efe3] Compile::Code_Gen()+0x443
V [libjvm.so+0x966554] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x18e4
V [libjvm.so+0x7cda0a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x10a
V [libjvm.so+0x9749f6] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc96
V [libjvm.so+0x975598] CompileBroker::compiler_thread_loop()+0x4b8
V [libjvm.so+0x17c038a] JavaThread::thread_main_inner()+0x2fa
V [libjvm.so+0x17c062d] JavaThread::run()+0x23d
V [libjvm.so+0x17c5158] Thread::call_run()+0xf8
V [libjvm.so+0x13af08e] thread_native_entry(Thread*)+0x10e
```
```
jdk/incubator/vector/Byte64VectorLoadStoreTests.java
jdk/incubator/vector/Byte128VectorLoadStoreTests.java
jdk/incubator/vector/Short128VectorLoadStoreTests.java
jdk/incubator/vector/Int128VectorLoadStoreTests.java
jdk/incubator/vector/FloatMaxVectorLoadStoreTests.java
jdk/incubator/vector/ShortMaxVectorLoadStoreTests.java
jdk/incubator/vector/IntMaxVectorLoadStoreTests.java
jdk/incubator/vector/ByteMaxVectorLoadStoreTests.java
jdk/incubator/vector/Float128VectorLoadStoreTests.java
jdk/incubator/vector/Short64VectorLoadStoreTests.java
```
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jvm/jdk/src/hotspot/cpu/x86/assembler_x86.cpp:4127), pid=90500, tid=90542
# Error: assert(VM_Version::supports_avx2()) failed
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc.jvm.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc.jvm.jdk, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x5cb1a4] Assembler::vpmovmskb(RegisterImpl*, XMMRegisterImpl*)+0xe4
#
Current CompileTask:
C2: 2698 732 jdk.incubator.vector.FloatVector::checkMaskFromIndexSize (16 bytes)
Stack: [0x00007f55811b2000,0x00007f55812b3000], sp=0x00007f55812adbf0, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x5cb1a4] Assembler::vpmovmskb(RegisterImpl*, XMMRegisterImpl*)+0xe4
V [libjvm.so+0x7cc492] C2_MacroAssembler::vector_mask_operation(int, RegisterImpl*, XMMRegisterImpl*, XMMRegisterImpl*, XMMRegisterImpl*, RegisterImpl*, int, int)+0x92
V [libjvm.so+0x412653] vmask_first_or_last_true_avxNode::emit(CodeBuffer&, PhaseRegAlloc*) const+0x233
V [libjvm.so+0x13cd3cf] PhaseOutput::scratch_emit_size(Node const*)+0x41f
V [libjvm.so+0x13c4634] PhaseOutput::shorten_branches(unsigned int*)+0x2a4
V [libjvm.so+0x13d514a] PhaseOutput::Output()+0xc3a
V [libjvm.so+0x95efe3] Compile::Code_Gen()+0x443
V [libjvm.so+0x966554] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x18e4
V [libjvm.so+0x7cda0a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x10a
V [libjvm.so+0x9749f6] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc96
V [libjvm.so+0x975598] CompileBroker::compiler_thread_loop()+0x4b8
V [libjvm.so+0x17c038a] JavaThread::thread_main_inner()+0x2fa
V [libjvm.so+0x17c062d] JavaThread::run()+0x23d
V [libjvm.so+0x17c5158] Thread::call_run()+0xf8
V [libjvm.so+0x13af08e] thread_native_entry(Thread*)+0x10e
```
- duplicates
-
JDK-8267519 20 jdk/incubator/vector tests fail "assert(VM_Version::supports_avx2()) failed"
-
- Closed
-
- relates to
-
JDK-8256973 Intrinsic creation for VectorMask query (lastTrue,firstTrue,trueCount) APIs
-
- Resolved
-