8267370: [Vector API] Fix several crashes after JDK-8256973